<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="195dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editSearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/editSearch"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinnerSearch"
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_height="50dp" />

    <RadioButton
        android:id="@+id/radioMovie"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@id/radioActor"
        android:text="@string/radioMovie"
        />

    <RadioButton
        android:id="@+id/radioActor"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@id/radioCountry"
        android:text="@string/radioActor"
        />

    <RadioButton
        android:id="@+id/radioCountry"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@id/buttonSearch"
        android:text="@string/radioCountry"
        />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/search" />

</RelativeLayout>