<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_popular"
        android:title="@string/popular"
        android:orderInCategory="1"
        android:visible="true"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_top"
        android:title="@string/top"
        android:orderInCategory="2"
        android:visible="true"
        android:icon="@drawable/ic_menu_star"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:orderInCategory="3"
        android:visible="true"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />

</menu>