<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/viewBg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bh.edu.ahlia.avel.movieviewer.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nestedScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".objectDetailsFragment"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="25sp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plot"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:text="@string/plot"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plotsynopsis"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:text="@string/rating"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userrating"
                android:padding="@dimen/padding_layout"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/release"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:text="@string/release"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/releasedate"
                android:padding="@dimen/padding_layout"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textSize="20sp"/>
    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>